--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/hunte/OneDrive/Desktop/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/hunte/OneDrive/Desktop/mysql-connector-java-8.0.20.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hunte/Downloads/ojdbc10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
